# xdr-codegen

./: .gitignore  Cargo.toml  README.md  test.x
.circleci/: config.yml
idl/: block.x  common.x  event.x  receipt.x  rpc.x  transaction.x
src/: main.rs  schema.rs
src/ast/: mod.rs
src/generator/: mod.rs
src/generator/commonjs/: mod.rs
src/generator/go/: mod.rs
src/generator/js/: mod.rs
src/generator/node/: mod.rs
src/generator/rust/: mod.rs
src/grammars/: xdr.pest
